--- a/code/index.html
+++ b/code/index.html
@@ -22,7 +22,7 @@
 <style>
     .inputs {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         height: 100vh;
